# CMakeLists.txt in src/main
# Create a library for the main module
# add_library(main_module main.cpp)

# Include directories for this module, if needed
# target_include_directories(main_module PRIVATE ${PROJECT_SOURCE_DIR}/src/mod1/ ${PROJECT_SOURCE_DIR}/libs/spdlog/include)
#${PROJECT_SOURCE_DIR}/src/mod2/ ${PROJECT_SOURCE_DIR}/libs/spdlog/include)